--- a/frontend/front-cinema/public/index.html
+++ b/frontend/front-cinema/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      #root {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Кинотеатр</title>
   </head>
